[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"
default-run = "rust-proxy"

[dependencies]
# Error handling
thiserror = "2.0"
# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }
# Configuration file parsing
serde = { version = "1.0", features = ["derive"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Logging
log4rs = "1.3.0"
log = "0.4.27"
# URL parsing
url = "2.5"
# Base64 encoding/decoding
base64 = "0.22"
# Password hashing
bcrypt = "0.17"
# Configuration file handling
config = "0.15"
# TLS support (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = []
upgrade = ["tokio-rustls", "rustls", "webpki-roots"]
